--- a/webcommon/pom.xml
+++ b/webcommon/pom.xml
@@ -31,21 +31,21 @@
 
 	<properties>
 		<jdk_version>1.8</jdk_version>
-		<log4j_version>1.2.14</log4j_version>
+		<log4j_version>2.0.2</log4j_version>
 		<slf4j_version>1.7.7</slf4j_version>
-		<junit_version>4.10</junit_version>
+		<hamcrest_version>1.3</hamcrest_version>
+		<junit_version>4.11</junit_version>
 		<freemarker_version>2.3.20</freemarker_version>
-		<struts_version>2.3.16.1</struts_version>
+		<struts_version>2.3.16.3</struts_version>
 		<spring_version>4.1.0.RELEASE</spring_version>
 		<spring_component>2.0.8</spring_component>
 		<aspectj_version>1.8.2</aspectj_version>
-		<hamcrest_version>1.3</hamcrest_version>
 		<fastjson_version>1.1.40</fastjson_version>
 		<commons_io>2.4</commons_io>
 		<commons_lang3>3.3.2</commons_lang3>
 		<commons_math3>3.3</commons_math3>
 		<commons_pool2>2.2</commons_pool2>
-		<commons_dbcp>1.4</commons_dbcp>
+		<commons_dbcp>2.0.1</commons_dbcp>
 		<commons_email>1.3.3</commons_email>
 		<commons_beanutils>1.9.2</commons_beanutils>
 		<commons_configuration>1.10</commons_configuration>
@@ -53,13 +53,13 @@
 		<servlet_version>3.1.0</servlet_version>
 		<mybatis_version>3.2.7</mybatis_version>
 		<mybatis_spring>1.2.2</mybatis_spring>
-		<hibernate_version>4.3.5.Final</hibernate_version>
+		<hibernate_version>4.3.6.Final</hibernate_version>
 		<rapid_version>4.0.6</rapid_version>
 		<rapid_core>4.0.5</rapid_core>
 		<encoding>UTF-8</encoding>
 		<mysql_version>5.1.20</mysql_version>
 		<jedis_version>2.5.2</jedis_version>
-		<mongodb_version>2.11.0</mongodb_version>
+		<mongodb_version>2.12.3</mongodb_version>
 		<quartz_version>2.2.1</quartz_version>
 		<activemq_verion>5.8.0</activemq_verion>
 		<thrift_version>0.9.1</thrift_version>
@@ -73,12 +73,18 @@
 	</properties>
 
 	<dependencies>
-		<!--log4j-->
+		<!--log4j
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>-->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
 			<version>${log4j_version}</version>
 		</dependency>
+
 		<!--junit-->
 		<dependency>
 			<groupId>junit</groupId>
