--- a/webdao/pom.xml
+++ b/webdao/pom.xml
@@ -66,8 +66,8 @@
 			<version>3.5.6-Final</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
 			<version>${commons_dbcp}</version>
 		</dependency>
 		<dependency>
