--- a/webcommon/pom.xml
+++ b/webcommon/pom.xml
@@ -40,7 +40,8 @@
 		<spring_version>4.1.0.RELEASE</spring_version>
 		<spring_component>2.0.8</spring_component>
 		<aspectj_version>1.8.2</aspectj_version>
-		<fastjson_version>1.2.1</fastjson_version>
+		<fastjson_version>1.2.3</fastjson_version>
+		<jackson_version>2.4.3</jackson_version>
 		<jodd_version>3.6.1</jodd_version>
 		<commons_io>2.4</commons_io>
 		<commons_lang3>3.3.2</commons_lang3>
@@ -198,7 +199,7 @@
 						<encoding>${encoding}</encoding>
 					</configuration>
 				</plugin>
-			
+
 				<!-- Project JDK Compile Version -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -232,7 +233,7 @@
 						</execution>
 					</executions>
 				</plugin>
-
+<!--
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
@@ -243,7 +244,7 @@
 						<warSourceExcludes></warSourceExcludes>
 						<warSourceIncludes></warSourceIncludes>
 						<webResources>
-				            <!--移动指定文件夹到指定位置
+				            移动指定文件夹到指定位置
 							<resource>
 				                <directory>webapp/WEB-INF</directory>
 				                <targetPath>WEB-INF</targetPath>
@@ -254,11 +255,11 @@
 				                <excludes>
 				                	<exclude>**/*.xml</exclude>
 				                </excludes>
-				            </resource>-->
-				            
+				            </resource>
+
 				        </webResources>
 					</configuration>
-				</plugin> 
+				</plugin> -->
 
 				<!-- 测试插件-->
 				<plugin>
@@ -279,7 +280,7 @@
 				            <exclude>**/TestSquare.java</exclude>
 				        </excludes> -->
 					</configuration>
-				</plugin> 
+				</plugin>
 
 				<!-- javadoc插件 -->
 				<plugin>
@@ -333,7 +334,7 @@
 					</executions>
 				</plugin> -->
 
-				<!-- 
+				<!--
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-help-plugin</artifactId>
