--- a/webspring/pom.xml
+++ b/webspring/pom.xml
@@ -15,15 +15,18 @@
 
 	<properties>
 	</properties>
-
-	<build>
-		<finalName>webspring</finalName>
-		<outputDirectory>target/classes</outputDirectory>
-		<defaultGoal>install</defaultGoal>
-		<directory>${basedir}/target</directory>
-	</build>
-
+	
 	<dependencies>
+		<!-- <dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-jaxb-annotations</artifactId>
+			<version>${jackson_version}</version>
+		</dependency> -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+  			<artifactId>jackson-databind</artifactId>
+			<version>${jackson_version}</version>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -125,5 +128,50 @@
 			<version>${web_version}</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<finalName>webspring</finalName>
+		<outputDirectory>target/classes</outputDirectory>
+		<defaultGoal>install</defaultGoal>
+		<directory>${basedir}/target</directory>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<webappDirectory>target/${project.artifactId}</webappDirectory>
+					<warSourceDirectory>webapp</warSourceDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${jdk_version}</source>
+					<target>${jdk_version}</target>
+					<showWarnings>true</showWarnings>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.2.5.v20141112</version>
+				<configuration>
+					<scanIntervalSeconds>2</scanIntervalSeconds>
+					 <webAppSourceDirectory>${basedir}/webapp</webAppSourceDirectory>
+					<webAppConfig>
+						<contextPath>/</contextPath>
+					</webAppConfig>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
