--- a/weblucene/pom.xml
+++ b/weblucene/pom.xml
@@ -15,9 +15,11 @@
 
 	<properties>
 		<lucene_version>4.7.2</lucene_version>
-		<elasticsearch_version>1.4.1</elasticsearch_version>
+		<elasticsearch_version>1.4.2</elasticsearch_version>
 		<tika_version>1.3</tika_version>
-		<ansj_version>1.4</ansj_version>
+		<ansj_version>2.0.8</ansj_version>
+		<tree_split_version>1.4</tree_split_version>
+		<ansj_plug_version>2.0.2</ansj_plug_version>
 		<mmseg4j_version>1.9.1</mmseg4j_version>
 		<pinyin4j_version>2.5.0</pinyin4j_version>
 	</properties>
@@ -74,17 +76,21 @@
 			<groupId>org.ansj</groupId>
 			<artifactId>ansj_seg</artifactId>
 			<version>${ansj_version}</version>
-			<classifier>min</classifier>
+		</dependency>
+		<dependency>
+		  	<groupId>org.nlpcn</groupId>
+		  	<artifactId>nlp-lang</artifactId>
+		  	<version>0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.ansj</groupId>
 			<artifactId>tree_split</artifactId>
-			<version>${ansj_version}</version>
+			<version>${tree_split_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.ansj</groupId>
 			<artifactId>ansj_lucene4_plug</artifactId>
-			<version>1.3</version>
+			<version>${ansj_plug_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.belerweb</groupId>
