--- a/weblucene/pom.xml
+++ b/weblucene/pom.xml
@@ -14,7 +14,7 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<lucene_version>4.7.2</lucene_version>
+		<lucene_version>4.10.2</lucene_version>
 		<elasticsearch_version>1.4.2</elasticsearch_version>
 		<tika_version>1.3</tika_version>
 		<ansj_version>2.0.8</ansj_version>
@@ -32,6 +32,11 @@
 	</build>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.10</version>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -55,7 +60,7 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-smartcn</artifactId>
-			<version>${lucene_version}</version>
+			<version>4.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
