--- a/weblucene/pom.xml
+++ b/weblucene/pom.xml
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.10</version>
+			<version>${slf4j_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
