--- a/webspring/pom.xml
+++ b/webspring/pom.xml
@@ -141,6 +141,36 @@
 		<defaultGoal>compile</defaultGoal>
 		<directory>${basedir}/target</directory>
 		<plugins>
+			<!-- 替换页面变量 
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<webResources>
+						<resource>  
+	                        <directory>src/main/webapp</directory>  
+	                        <includes>  
+	                            <include>**/*.vm</include>  
+	                        </includes>  
+	                        <filtering>true</filtering>  
+	                    </resource>  
+					</webResources>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<version>1.3</version>
+				<configuration>
+					<timestampFormat>'?v='yyyyMMddHHmmss</timestampFormat>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals><goal>create-timestamp</goal></goals>
+					</execution>
+				</executions>
+			</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
