--- a/webcommon/pom.xml
+++ b/webcommon/pom.xml
@@ -31,29 +31,29 @@
 
 	<properties>
 		<jdk_version>1.8</jdk_version>
-		<log4j_version>2.1</log4j_version>
+		<log4j_version>2.2</log4j_version>
 		<slf4j_version>1.7.10</slf4j_version>
 		<hamcrest_version>1.3</hamcrest_version>
 		<junit_version>4.12</junit_version>
-		<freemarker_version>2.3.21</freemarker_version>
-		<struts_version>2.3.16.3</struts_version>
+		<freemarker_version>2.3.22</freemarker_version>
+		<struts_version>2.3.20</struts_version>
 		<spring_version>4.1.4.RELEASE</spring_version>
 		<spring_component>2.0.8</spring_component>
-		<aspectj_version>1.8.4</aspectj_version>
+		<aspectj_version>1.8.5</aspectj_version>
 		<fastjson_version>1.2.4</fastjson_version>
-		<jackson_version>2.5.0</jackson_version>
-		<jodd_version>3.6.3</jodd_version>
+		<jackson_version>2.5.1</jackson_version>
+		<jodd_version>3.6.5</jodd_version>
 		<joda-time_version>2.7</joda-time_version>
 		<guava_version>18.0</guava_version>
 		<commons_io>2.4</commons_io>
 		<commons_lang3>3.3.2</commons_lang3>
 		<commons_math3>3.4.1</commons_math3>
 		<commons_pool2>2.3</commons_pool2>
-		<commons_dbcp>2.0.1</commons_dbcp>
+		<commons_dbcp2>2.1</commons_dbcp2>
 		<commons_email>1.3.3</commons_email>
 		<commons_beanutils>1.9.2</commons_beanutils>
 		<commons_configuration>1.10</commons_configuration>
-		<httpcomponents_version>4.3.6</httpcomponents_version>
+		<httpcomponents_version>4.4</httpcomponents_version>
 		<servlet_version>3.1.0</servlet_version>
 		<mybatis_version>3.2.8</mybatis_version>
 		<mybatis_spring>1.2.2</mybatis_spring>
@@ -63,7 +63,7 @@
 		<encoding>UTF-8</encoding>
 		<mysql_version>5.1.34</mysql_version>
 		<jedis_version>2.6.2</jedis_version>
-		<mongodb_version>2.12.4</mongodb_version>
+		<mongodb_version>2.13.0</mongodb_version>
 		<quartz_version>2.2.1</quartz_version>
 		<activemq_verion>5.10.0</activemq_verion>
 		<activemq_core_verion>5.7.0</activemq_core_verion>
@@ -78,16 +78,33 @@
 	</properties>
 
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j_version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>${log4j_version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-to-slf4j</artifactId>
+			<version>${log4j_version}</version>
+		</dependency>
+				
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j_version}</version>
+		</dependency>
+		<!-- <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j_version}</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
