--- a/webtemplate/pom.xml
+++ b/webtemplate/pom.xml
@@ -71,14 +71,13 @@
 		<dependency>
 			<groupId>org.apache.thrift</groupId>
 			<artifactId>libthrift</artifactId>
-			<version>0.9.0</version>
+			<version>${thrift_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.thoughtworks.paranamer</groupId>
 			<artifactId>paranamer</artifactId>
 			<version>2.3</version>
 		</dependency>
-
 
 	</dependencies>
 
