--- a/webutils/pom.xml
+++ b/webutils/pom.xml
@@ -19,6 +19,32 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.databene</groupId>
+			<artifactId>contiperf</artifactId>
+			<version>2.3.4</version>
+			<optional>true</optional>
+		</dependency>
+		<!-- <dependency>
+			<groupId>co.paralleluniverse</groupId>
+			<artifactId>quasar-core</artifactId>
+			<version>0.6.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>co.paralleluniverse</groupId>
+		    <artifactId>quasar-actors</artifactId>
+		    <version>0.6.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>co.paralleluniverse</groupId>
+		    <artifactId>quasar-galaxy</artifactId>
+		    <version>0.6.2</version>
+		</dependency> -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>fluent-hc</artifactId>
+			<version>4.4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
 			<artifactId>zookeeper</artifactId>
 			<version>3.4.6</version>
