--- a/webactivemq/pom.xml
+++ b/webactivemq/pom.xml
@@ -22,6 +22,13 @@
 			<artifactId>commons-configuration</artifactId>
 			<version>${commons_configuration}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.alibaba.rocketmq</groupId>
+			<artifactId>rocketmq-client</artifactId>
+			<version>3.2.6</version>
+		</dependency>
+		
 		<dependency>
 		  <groupId>org.apache.activemq</groupId>
 		  <artifactId>activemq-pool</artifactId>
