--- a/webdao/pom.xml
+++ b/webdao/pom.xml
@@ -68,7 +68,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
-			<version>${commons_dbcp}</version>
+			<version>${commons_dbcp2}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
