--- a/utils/utils-code/pom.xml
+++ b/utils/utils-code/pom.xml
@@ -44,6 +44,16 @@
 			<artifactId>rapid-generator-template</artifactId>
 			<version>${rapid_version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.paranamer</groupId>
+			<artifactId>paranamer</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.thrift</groupId>
+			<artifactId>libthrift</artifactId>
+			<version>${thrift_version}</version>
+		</dependency>
 	</dependencies>
 	
 </project>
