--- a/webspark/pom.xml
+++ b/webspark/pom.xml
@@ -3,10 +3,9 @@
 			http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.spark</groupId>
-	<artifactId>spark-java</artifactId>
+	<groupId>com.webapp</groupId>
+	<artifactId>webspark</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
 
 	<build>
 		<plugins>
