--- a/webframe/pom.xml
+++ b/webframe/pom.xml
@@ -14,28 +14,11 @@
 	<packaging>war</packaging>
 
 	<dependencies>
-		<!--
-		<dependency>
-			<groupId>org.python</groupId>
-			<artifactId>jython-standalone</artifactId>
-			<version>2.7.0</version>
-		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.pegdown</groupId>
 			<artifactId>pegdown</artifactId>
 			<version>1.6.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.parboiled</groupId>
-			<artifactId>parboiled_2.11</artifactId>
-			<version>2.1.0</version>
-		</dependency>
-		-->
-		<dependency>
-			<groupId>com.github.rjeschke</groupId>
-			<artifactId>txtmark</artifactId>
-			<version>0.13</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
@@ -95,11 +78,11 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring_version}</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 	    	<groupId>org.springframework</groupId>
 	    	<artifactId>spring-test</artifactId>
 	    	<version>${spring_version}</version>
-	    </dependency>
+	    </dependency> -->
 	    <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
