--- a/utils/utils-code/pom.xml
+++ b/utils/utils-code/pom.xml
@@ -58,6 +58,16 @@
 			<artifactId>libthrift</artifactId>
 			<version>${thrift_version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz</artifactId>
+			<version>1.r.54</version>
+		</dependency>
+		<dependency>
+  			<groupId>com.webapp</groupId>
+  			<artifactId>utils-common</artifactId>
+  			<version>${utils_version}</version>
+  		</dependency>
 	</dependencies>
 
 </project>
